--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-helmet": "^6.1.0",
     "react-image-magnify": "^2.7.4",
     "react-items-carousel": "^2.8.0",
+    "react-loader-spinner": "^3.1.14",
     "react-masonry-component": "^6.2.1",
     "react-native-firebase": "^5.6.0",
     "react-otp-input": "^1.0.1",
