--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "beatmysugar",
   "version": "0.1.0",
-  "homepage": ".",
+  "homepage": "https://stag.beatmysugar.com/",
   "private": true,
   "dependencies": {
     "@kunukn/react-collapse": "^1.2.7",
