--- a/package.json
+++ b/package.json
@@ -4,26 +4,26 @@
   "private": true,
   "dependencies": {
     "@kunukn/react-collapse": "^1.2.7",
-    "firebase": "^7.8.1",
+    "firebase": "^7.24.0",
     "firebase-tools": "^7.16.2",
-    "firebaseui": "^4.5.0",
+    "firebaseui": "^4.7.1",
     "html-react-parser": "^0.9.2",
     "install": "^0.13.0",
-    "mdbreact": "^4.25.6",
-    "moment": "^2.24.0",
-    "notiflix": "^2.3.1",
+    "mdbreact": "^4.27.0",
+    "moment": "^2.29.1",
+    "notiflix": "^2.7.0",
     "notiflix-react": "^1.4.0",
-    "npm": "^6.14.9",
+    "npm": "^6.14.10",
     "payu-sdk": "^1.1.1",
-    "react": "^16.12.0",
-    "react-bootstrap": "^1.0.1",
-    "react-collapse": "^5.0.1",
-    "react-confirm-alert": "^2.6.1",
-    "react-date-picker": "^8.0.1",
-    "react-datepicker": "^3.1.3",
-    "react-dom": "^16.13.1",
+    "react": "^16.14.0",
+    "react-bootstrap": "^1.4.0",
+    "react-collapse": "^5.1.0",
+    "react-confirm-alert": "^2.6.2",
+    "react-date-picker": "^8.0.5",
+    "react-datepicker": "^3.3.0",
+    "react-dom": "^16.14.0",
     "react-facebook-login": "^4.1.1",
-    "react-google-login": "^5.1.10",
+    "react-google-login": "^5.2.1",
     "react-helmet": "^6.1.0",
     "react-image-magnify": "^2.7.4",
     "react-items-carousel": "^2.8.0",
@@ -32,16 +32,17 @@
     "react-native-firebase": "^5.6.0",
     "react-otp-input": "^1.0.1",
     "react-owl-carousel2": "^0.3.0",
-    "react-redux": "^7.2.0",
+    "react-redux": "^7.2.2",
     "react-responsive-accordion": "^1.0.0",
-    "react-responsive-carousel": "^3.2.4",
-    "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2",
+    "react-responsive-carousel": "^3.2.11",
+    "react-responsive-modal": "^6.0.0",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.4",
-    "react-select": "^3.1.0",
+    "react-select": "^3.1.1",
     "react-share": "^3.0.1",
     "react-slick": "^0.26.1",
-    "react-whirligig": "^6.6.4",
+    "react-whirligig": "^6.6.15",
     "redux": "^4.0.5",
     "slick-carousel": "^1.8.1",
     "start": "^5.1.0"
