--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "firebase": "^7.24.0",
     "firebase-tools": "^7.16.2",
     "firebaseui": "^4.7.1",
+    "gzipper": "^4.3.0",
     "html-react-parser": "^0.9.2",
     "install": "^0.13.0",
     "mdbreact": "^4.27.0",
