--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-redux": "^7.2.0",
     "react-responsive-accordion": "^1.0.0",
     "react-responsive-carousel": "^3.2.4",
+    "react-responsive-modal": "^6.0.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.3",
